--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,12 @@ textarea:focus {
     background: #4b4b4b;
 }
 
+input[type="submit"],
+input[type="button"],
+button {
+    padding: 6px;
+}
+
 input[type="submit"]:disabled,
 input[type="button"]:disabled,
 button:disabled {
@@ -114,7 +120,6 @@ body {
 
 .btn-full {
     width: 100%;
-    padding: 6px;
 }
 
 .page-content:not(.on) {
